简单C语言语法分析器/SAC/parser.output
Terminals which are not used

   TM_ADD_ASGN
   TM_INDEX
   TM_UMINUS
   TM_UPLUS


Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_ROOT_LIST

    2 NT_ROOT_LIST: NT_ROOT NT_ROOT_LIST
    3             | NT_ROOT

    4 NT_ROOT: NT_DEF
    5        | NT_VARDECL TM_SEMICOL

    6 NT_DEF: NT_TYPE NT_FUNCDECDEF_EXPR TM_SEMICOL
    7       | NT_TYPE NT_FUNCDECDEF_EXPR NT_WITH_COMMENT TM_SEMICOL
    8       | NT_TYPE NT_FUNCDECDEF_EXPR TM_LEFT_BRACE TM_RIGHT_BRACE
    9       | NT_TYPE NT_FUNCDECDEF_EXPR NT_WITH_COMMENT TM_LEFT_BRACE TM_RIGHT_BRACE
   10       | NT_TYPE NT_FUNCDECDEF_EXPR TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   11       | NT_TYPE NT_FUNCDECDEF_EXPR NT_WITH_COMMENT TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   12       | TM_STRUCT TM_IDENT NT_FIELD_DEC_LIST TM_SEMICOL
   13       | TM_STRUCT TM_IDENT TM_SEMICOL
   14       | TM_UNION TM_IDENT NT_FIELD_DEC_LIST TM_SEMICOL
   15       | TM_UNION TM_IDENT TM_SEMICOL
   16       | TM_ENUM TM_IDENT NT_ENUM_LIST TM_SEMICOL
   17       | TM_ENUM TM_IDENT TM_SEMICOL
   18       | NT_LET_COMMENT

   19 NT_FUNCDECDEF_EXPR: TM_STAR NT_FUNCDECDEF_EXPR
   20                   | NT_FUNCDECDEF_EXPR_N

   21 NT_FUNCDECDEF_EXPR_N: TM_IDENT NT_FUNC_DEF

   22 NT_FUNC_DEF: TM_LEFT_PAREN TM_RIGHT_PAREN
   23            | TM_LEFT_PAREN NT_TYPE_EXPR_LIST TM_RIGHT_PAREN

   24 NT_TYPE_EXPR_LIST: NT_VARDECL TM_COMMA NT_TYPE_EXPR_LIST
   25                  | NT_VARDECL

   26 NT_LET_COMMENT: TM_COMMENT_START TM_LET TM_IDENT NT_VAR_LIST TM_ASGNOP NT_RA_EXPR TM_COMMENT_END

   27 NT_VAR_LIST: TM_LEFT_PAREN TM_RIGHT_PAREN
   28            | TM_LEFT_PAREN NT_ID_COMMA_VAR TM_RIGHT_PAREN

   29 NT_ID_COMMA_VAR: TM_IDENT TM_COMMA NT_ID_COMMA_VAR
   30                | TM_IDENT

   31 NT_FIELD_DEC_LIST: TM_LEFT_BRACE TM_RIGHT_BRACE
   32                  | TM_LEFT_BRACE NT_FDL_SEMICOL TM_RIGHT_BRACE

   33 NT_FDL_SEMICOL: NT_TYPE NT_EXPR TM_SEMICOL NT_FDL_SEMICOL
   34               | NT_TYPE NT_EXPR TM_SEMICOL

   35 NT_ENUM_LIST: TM_LEFT_BRACE TM_RIGHT_BRACE
   36             | TM_LEFT_BRACE NT_ID_COMMA_ENUM TM_RIGHT_BRACE

   37 NT_ID_COMMA_ENUM: TM_IDENT
   38                 | TM_IDENT TM_COMMA NT_ID_COMMA_ENUM

   39 NT_CMD: NT_CMD NT_LAST_CMD
   40       | NT_CMD NT_COMMENT
   41       | NT_COMMENT
   42       | NT_LAST_CMD

   43 NT_LAST_CMD: TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   44            | TM_LEFT_BRACE TM_RIGHT_BRACE
   45            | TM_SEMICOL
   46            | NT_VARDECL TM_SEMICOL
   47            | NT_SIMPLE_CMD TM_SEMICOL
   48            | NT_IF_CMD
   49            | NT_SWITCH_CMD
   50            | NT_WHILE_CMD
   51            | NT_DOWHILE_CMD
   52            | NT_FOR_CMD
   53            | TM_BREAK TM_SEMICOL
   54            | TM_CONTINUE TM_SEMICOL
   55            | NT_RETURN_CMD TM_SEMICOL

   56 NT_VARDECL: NT_TYPE NT_EXPR_VD

   57 NT_EXPR_VD: TM_STAR NT_EXPR_VD
   58           | NT_EXPR_VD_A

   59 NT_EXPR_VD_A: NT_EXPR_VD_A TM_LEFT_BRACK NT_EXPR TM_RIGHT_BRACK
   60             | NT_EXPR_VD_B

   61 NT_EXPR_VD_B: TM_IDENT
   62             | TM_LEFT_PAREN NT_EXPR_VD TM_RIGHT_PAREN

   63 NT_SIMPLE_CMD: NT_EXPR
   64              | NT_EXPR TM_ASGNOP NT_EXPR
   65              | NT_EXPR TM_PLUS_ASGN NT_EXPR
   66              | NT_EXPR TM_MINUS_ASGN NT_EXPR
   67              | NT_EXPR TM_MUL_ASGN NT_EXPR
   68              | NT_EXPR TM_DIV_ASGN NT_EXPR
   69              | NT_EXPR TM_MOD_ASGN NT_EXPR
   70              | NT_EXPR TM_BAND_ASGN NT_EXPR
   71              | NT_EXPR TM_BOR_ASGN NT_EXPR
   72              | NT_EXPR TM_XOR_ASGN NT_EXPR
   73              | NT_EXPR TM_SHL_ASGN NT_EXPR
   74              | NT_EXPR TM_SHR_ASGN NT_EXPR
   75              | TM_INC NT_EXPR
   76              | TM_DEC NT_EXPR
   77              | NT_EXPR TM_INC
   78              | NT_EXPR TM_DEC

   79 NT_IF_CMD: TM_IF TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN NT_LAST_CMD
   80          | TM_IF TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN NT_LAST_CMD TM_ELSE NT_LAST_CMD

   81 NT_FOR_CMD: TM_FOR TM_LEFT_PAREN NT_SIMPLE_CMD TM_SEMICOL NT_EXPR TM_SEMICOL NT_SIMPLE_CMD TM_RIGHT_PAREN NT_LAST_CMD
   82           | TM_FOR TM_LEFT_PAREN TM_SEMICOL NT_EXPR TM_SEMICOL NT_SIMPLE_CMD TM_RIGHT_PAREN NT_LAST_CMD
   83           | TM_FOR TM_LEFT_PAREN NT_SIMPLE_CMD TM_SEMICOL TM_SEMICOL NT_SIMPLE_CMD TM_RIGHT_PAREN NT_LAST_CMD
   84           | TM_FOR TM_LEFT_PAREN NT_SIMPLE_CMD TM_SEMICOL NT_EXPR TM_SEMICOL TM_RIGHT_PAREN NT_LAST_CMD
   85           | TM_FOR TM_LEFT_PAREN TM_SEMICOL TM_SEMICOL NT_SIMPLE_CMD TM_RIGHT_PAREN NT_LAST_CMD
   86           | TM_FOR TM_LEFT_PAREN TM_SEMICOL NT_EXPR TM_SEMICOL TM_RIGHT_PAREN NT_LAST_CMD
   87           | TM_FOR TM_LEFT_PAREN NT_SIMPLE_CMD TM_SEMICOL TM_SEMICOL TM_RIGHT_PAREN NT_LAST_CMD
   88           | TM_FOR TM_LEFT_PAREN TM_SEMICOL TM_SEMICOL TM_RIGHT_PAREN NT_LAST_CMD
   89           | NT_INV_COMMENT TM_FOR TM_LEFT_PAREN NT_SIMPLE_CMD TM_SEMICOL NT_EXPR TM_SEMICOL NT_SIMPLE_CMD TM_RIGHT_PAREN NT_LAST_CMD
   90           | NT_INV_COMMENT TM_FOR TM_LEFT_PAREN TM_SEMICOL NT_EXPR TM_SEMICOL NT_SIMPLE_CMD TM_RIGHT_PAREN NT_LAST_CMD
   91           | NT_INV_COMMENT TM_FOR TM_LEFT_PAREN NT_SIMPLE_CMD TM_SEMICOL TM_SEMICOL NT_SIMPLE_CMD TM_RIGHT_PAREN NT_LAST_CMD
   92           | NT_INV_COMMENT TM_FOR TM_LEFT_PAREN NT_SIMPLE_CMD TM_SEMICOL NT_EXPR TM_SEMICOL TM_RIGHT_PAREN NT_LAST_CMD
   93           | NT_INV_COMMENT TM_FOR TM_LEFT_PAREN TM_SEMICOL TM_SEMICOL NT_SIMPLE_CMD TM_RIGHT_PAREN NT_LAST_CMD
   94           | NT_INV_COMMENT TM_FOR TM_LEFT_PAREN TM_SEMICOL NT_EXPR TM_SEMICOL TM_RIGHT_PAREN NT_LAST_CMD
   95           | NT_INV_COMMENT TM_FOR TM_LEFT_PAREN NT_SIMPLE_CMD TM_SEMICOL TM_SEMICOL TM_RIGHT_PAREN NT_LAST_CMD
   96           | NT_INV_COMMENT TM_FOR TM_LEFT_PAREN TM_SEMICOL TM_SEMICOL TM_RIGHT_PAREN NT_LAST_CMD

   97 NT_WHILE_CMD: TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN NT_LAST_CMD
   98             | NT_INV_COMMENT TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN NT_LAST_CMD

   99 NT_DOWHILE_CMD: TM_DO NT_LAST_CMD TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
  100               | NT_INV_COMMENT TM_DO NT_LAST_CMD TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

  101 NT_SWITCH_CMD: TM_SWITCH TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CASE_LIST TM_RIGHT_BRACE

  102 NT_RETURN_CMD: TM_RETURN
  103              | TM_RETURN NT_EXPR

  104 NT_CASE_LIST: NT_CASE_TYPE NT_CASE_LIST
  105             | NT_CASE_TYPE

  106 NT_CASE_TYPE: TM_CASE NT_EXPR TM_CONOL NT_CMD
  107             | TM_DEFAULT TM_CONOL NT_CMD

  108 NT_COMMENT: TM_COMMENT_START NT_RA_EXPR TM_COMMENT_END
  109           | TM_COMMENT_START TM_COMMENT_END

  110 NT_INV_COMMENT: TM_COMMENT_START TM_INV NT_RA_EXPR TM_COMMENT_END

  111 NT_WITH_COMMENT: TM_COMMENT_START TM_WITH NT_WITH_VAR_LIST TM_REQUIRE NT_RA_EXPR TM_ENSURE NT_RA_EXPR TM_COMMENT_END
  112                | TM_COMMENT_START TM_REQUIRE NT_RA_EXPR TM_ENSURE NT_RA_EXPR TM_COMMENT_END

  113 NT_WITH_VAR_LIST: TM_IDENT NT_WITH_VAR_LIST
  114                 | TM_IDENT

  115 NT_RA_EXPR: NT_UNOP_RA_EXPR
  116           | NT_RA_EXPR TM_PLUS NT_RA_EXPR
  117           | NT_RA_EXPR TM_MINUS NT_RA_EXPR
  118           | NT_RA_EXPR TM_STAR NT_RA_EXPR
  119           | NT_RA_EXPR TM_DIV NT_RA_EXPR
  120           | NT_RA_EXPR TM_MOD NT_RA_EXPR
  121           | NT_RA_EXPR TM_LT NT_RA_EXPR
  122           | NT_RA_EXPR TM_GT NT_RA_EXPR
  123           | NT_RA_EXPR TM_GE NT_RA_EXPR
  124           | NT_RA_EXPR TM_LE NT_RA_EXPR
  125           | NT_RA_EXPR TM_EQ NT_RA_EXPR
  126           | NT_RA_EXPR TM_NE NT_RA_EXPR
  127           | NT_RA_EXPR TM_AND NT_RA_EXPR
  128           | NT_RA_EXPR TM_OR NT_RA_EXPR
  129           | NT_RA_EXPR TM_BAND NT_RA_EXPR
  130           | NT_RA_EXPR TM_BOR NT_RA_EXPR
  131           | NT_RA_EXPR TM_XOR NT_RA_EXPR
  132           | NT_RA_EXPR TM_SHL NT_RA_EXPR
  133           | NT_RA_EXPR TM_SHR NT_RA_EXPR
  134           | TM_FORALL TM_IDENT TM_COMMA NT_RA_EXPR
  135           | TM_EXISTS TM_IDENT TM_COMMA NT_RA_EXPR

  136 NT_UNOP_RA_EXPR: TM_MINUS NT_UNOP_RA_EXPR
  137                | TM_PLUS NT_UNOP_RA_EXPR
  138                | TM_NOTBOOL NT_UNOP_RA_EXPR
  139                | TM_NOTINT NT_UNOP_RA_EXPR
  140                | TM_LEFT_PAREN NT_TYPE NT_PTR TM_RIGHT_PAREN NT_UNOP_RA_EXPR
  141                | TM_STAR NT_UNOP_RA_EXPR
  142                | TM_BAND NT_UNOP_RA_EXPR
  143                | NT_RA_EXPR_F

  144 NT_RA_EXPR_F: TM_NAT
  145             | TM___RETURN
  146             | TM_IDENT
  147             | TM_IDENT NT_RA_FUNC_CALL
  148             | NT_RA_EXPR_F TM_LEFT_BRACK NT_RA_EXPR TM_RIGHT_BRACK
  149             | NT_RA_EXPR_F TM_FIELDOF TM_IDENT
  150             | NT_RA_EXPR_F TM_FIELDOFPTR TM_IDENT
  151             | TM_LEFT_PAREN NT_RA_EXPR TM_RIGHT_PAREN

  152 NT_RA_FUNC_CALL: TM_LEFT_PAREN TM_RIGHT_PAREN
  153                | TM_LEFT_PAREN NT_RA_LIST TM_RIGHT_PAREN

  154 NT_RA_LIST: NT_RA_EXPR TM_COMMA NT_RA_LIST
  155           | NT_RA_EXPR

  156 NT_TYPE: TM_VOID
  157        | TM_CHAR
  158        | TM_U8
  159        | TM_INT
  160        | TM_INT64
  161        | TM_UINT
  162        | TM_UINT64
  163        | TM_STRUCT TM_IDENT
  164        | TM_UNION TM_IDENT
  165        | TM_ENUM TM_IDENT

  166 NT_EXPR: NT_UNOP_EXPR
  167        | NT_EXPR TM_PLUS NT_EXPR
  168        | NT_EXPR TM_MINUS NT_EXPR
  169        | NT_EXPR TM_STAR NT_EXPR
  170        | NT_EXPR TM_DIV NT_EXPR
  171        | NT_EXPR TM_MOD NT_EXPR
  172        | NT_EXPR TM_LT NT_EXPR
  173        | NT_EXPR TM_GT NT_EXPR
  174        | NT_EXPR TM_LE NT_EXPR
  175        | NT_EXPR TM_GE NT_EXPR
  176        | NT_EXPR TM_EQ NT_EXPR
  177        | NT_EXPR TM_NE NT_EXPR
  178        | NT_EXPR TM_AND NT_EXPR
  179        | NT_EXPR TM_OR NT_EXPR
  180        | NT_EXPR TM_BAND NT_EXPR
  181        | NT_EXPR TM_BOR NT_EXPR
  182        | NT_EXPR TM_XOR NT_EXPR
  183        | NT_EXPR TM_SHL NT_EXPR
  184        | NT_EXPR TM_SHR NT_EXPR

  185 NT_UNOP_EXPR: TM_NOTBOOL NT_UNOP_EXPR
  186             | TM_NOTINT NT_UNOP_EXPR
  187             | TM_MINUS NT_UNOP_EXPR
  188             | TM_PLUS NT_UNOP_EXPR
  189             | TM_STAR NT_UNOP_EXPR
  190             | TM_BAND NT_UNOP_EXPR
  191             | TM_LEFT_PAREN NT_TYPE NT_PTR TM_RIGHT_PAREN NT_UNOP_EXPR
  192             | NT_EXPR_F

  193 NT_EXPR_F: TM_NAT
  194          | TM_IDENT
  195          | TM_IDENT NT_FUNC_CALL
  196          | TM_SIZEOF TM_LEFT_PAREN NT_TYPE NT_PTR TM_RIGHT_PAREN
  197          | TM_SIZEOF TM_LEFT_PAREN NT_TYPE TM_RIGHT_PAREN
  198          | NT_EXPR_F TM_LEFT_BRACK NT_EXPR TM_RIGHT_BRACK
  199          | NT_EXPR_F TM_FIELDOF TM_IDENT
  200          | NT_EXPR_F TM_FIELDOFPTR TM_IDENT
  201          | TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

  202 NT_FUNC_CALL: TM_LEFT_PAREN TM_RIGHT_PAREN
  203             | TM_LEFT_PAREN NT_EXPR_LIST TM_RIGHT_PAREN

  204 NT_EXPR_LIST: NT_EXPR TM_COMMA NT_EXPR_LIST
  205             | NT_EXPR

  206 NT_PTR: TM_STAR NT_PTR
  207       | TM_STAR
  208       | NT_PTR_A

  209 NT_PTR_A: NT_PTR_A TM_LEFT_BRACK NT_EXPR TM_RIGHT_BRACK
  210         | TM_LEFT_BRACK NT_EXPR TM_RIGHT_BRACK


Terminals, with rules where they appear

$end (0) 0
error (256)
TM_NAT (258) 144 193
TM_IDENT (259) 12 13 14 15 16 17 21 26 29 30 37 38 61 113 114 134 135
    146 147 149 150 163 164 165 194 195 199 200
TM_LEFT_BRACE (260) 8 9 10 11 31 32 35 36 43 44 101
TM_RIGHT_BRACE (261) 8 9 10 11 31 32 35 36 43 44 101
TM_LEFT_BRACK (262) 59 148 198 209 210
TM_RIGHT_BRACK (263) 59 148 198 209 210
TM_LEFT_PAREN (264) 22 23 27 28 62 79 80 81 82 83 84 85 86 87 88 89
    90 91 92 93 94 95 96 97 98 99 100 101 140 151 152 153 191 196 197
    201 202 203
TM_RIGHT_PAREN (265) 22 23 27 28 62 79 80 81 82 83 84 85 86 87 88 89
    90 91 92 93 94 95 96 97 98 99 100 101 140 151 152 153 191 196 197
    201 202 203
TM_SEMICOL (266) 5 6 7 12 13 14 15 16 17 33 34 45 46 47 53 54 55 81
    82 83 84 85 86 87 88 89 90 91 92 93 94 95 96
TM_COMMA (267) 24 29 38 134 135 154 204
TM_CONOL (268) 106 107
TM_VOID (269) 156
TM_CHAR (270) 157
TM_U8 (271) 158
TM_INT (272) 159
TM_INT64 (273) 160
TM_UINT (274) 161
TM_UINT64 (275) 162
TM_STRUCT (276) 12 13 163
TM_UNION (277) 14 15 164
TM_ENUM (278) 16 17 165
TM_WITH (279) 111
TM_REQUIRE (280) 111 112
TM_ENSURE (281) 111 112
TM___RETURN (282) 145
TM_INV (283) 110
TM_FORALL (284) 134
TM_EXISTS (285) 135
TM_LET (286) 26
TM_IF (287) 79 80
TM_ELSE (288) 80
TM_FOR (289) 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96
TM_DO (290) 99 100
TM_WHILE (291) 97 98 99 100
TM_SWITCH (292) 101
TM_CASE (293) 106
TM_DEFAULT (294) 107
TM_RETURN (295) 102 103
TM_BREAK (296) 53
TM_CONTINUE (297) 54
TM_SIZEOF (298) 196 197
TM_ASGNOP (299) 26 64
TM_PLUS_ASGN (300) 65
TM_MINUS_ASGN (301) 66
TM_MUL_ASGN (302) 67
TM_DIV_ASGN (303) 68
TM_MOD_ASGN (304) 69
TM_BAND_ASGN (305) 70
TM_BOR_ASGN (306) 71
TM_XOR_ASGN (307) 72
TM_SHL_ASGN (308) 73
TM_SHR_ASGN (309) 74
TM_PLUS (310) 116 137 167 188
TM_MINUS (311) 117 136 168 187
TM_STAR (312) 19 57 118 141 169 189 206 207
TM_DIV (313) 119 170
TM_MOD (314) 120 171
TM_GE (315) 123 175
TM_LE (316) 124 174
TM_GT (317) 122 173
TM_LT (318) 121 172
TM_EQ (319) 125 176
TM_NE (320) 126 177
TM_AND (321) 127 178
TM_OR (322) 128 179
TM_BAND (323) 129 142 180 190
TM_BOR (324) 130 181
TM_XOR (325) 131 182
TM_SHR (326) 133 184
TM_SHL (327) 132 183
TM_NOTINT (328) 139 186
TM_NOTBOOL (329) 138 185
TM_INC (330) 75 77
TM_DEC (331) 76 78
TM_FIELDOF (332) 149 199
TM_FIELDOFPTR (333) 150 200
TM_COMMENT_START (334) 26 108 109 110 111 112
TM_COMMENT_END (335) 26 108 109 110 111 112
TM_ADD_ASGN (336)
TM_MUL (337)
TM_DEREF (338)
TM_INDEX (339)
TM_ADDRES (340)
TM_UMINUS (341)
TM_UPLUS (342)
TM_THEN (343)


Nonterminals, with rules where they appear

$accept (89)
    on left: 0
NT_WHOLE (90)
    on left: 1, on right: 0
NT_ROOT_LIST (91)
    on left: 2 3, on right: 1 2
NT_ROOT (92)
    on left: 4 5, on right: 2 3
NT_DEF (93)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18, on right: 4
NT_FUNCDECDEF_EXPR (94)
    on left: 19 20, on right: 6 7 8 9 10 11 19
NT_FUNCDECDEF_EXPR_N (95)
    on left: 21, on right: 20
NT_FUNC_DEF (96)
    on left: 22 23, on right: 21
NT_TYPE_EXPR_LIST (97)
    on left: 24 25, on right: 23 24
NT_LET_COMMENT (98)
    on left: 26, on right: 18
NT_VAR_LIST (99)
    on left: 27 28, on right: 26
NT_ID_COMMA_VAR (100)
    on left: 29 30, on right: 28 29
NT_FIELD_DEC_LIST (101)
    on left: 31 32, on right: 12 14
NT_FDL_SEMICOL (102)
    on left: 33 34, on right: 32 33
NT_ENUM_LIST (103)
    on left: 35 36, on right: 16
NT_ID_COMMA_ENUM (104)
    on left: 37 38, on right: 36 38
NT_CMD (105)
    on left: 39 40 41 42, on right: 10 11 39 40 43 106 107
NT_LAST_CMD (106)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55,
    on right: 39 42 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94
    95 96 97 98 99 100
NT_VARDECL (107)
    on left: 56, on right: 5 24 25 46
NT_EXPR_VD (108)
    on left: 57 58, on right: 56 57 62
NT_EXPR_VD_A (109)
    on left: 59 60, on right: 58 59
NT_EXPR_VD_B (110)
    on left: 61 62, on right: 60
NT_SIMPLE_CMD (111)
    on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78,
    on right: 47 81 82 83 84 85 87 89 90 91 92 93 95
NT_IF_CMD (112)
    on left: 79 80, on right: 48
NT_FOR_CMD (113)
    on left: 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96,
    on right: 52
NT_WHILE_CMD (114)
    on left: 97 98, on right: 50
NT_DOWHILE_CMD (115)
    on left: 99 100, on right: 51
NT_SWITCH_CMD (116)
    on left: 101, on right: 49
NT_RETURN_CMD (117)
    on left: 102 103, on right: 55
NT_CASE_LIST (118)
    on left: 104 105, on right: 101 104
NT_CASE_TYPE (119)
    on left: 106 107, on right: 104 105
NT_COMMENT (120)
    on left: 108 109, on right: 40 41
NT_INV_COMMENT (121)
    on left: 110, on right: 89 90 91 92 93 94 95 96 98 100
NT_WITH_COMMENT (122)
    on left: 111 112, on right: 7 9 11
NT_WITH_VAR_LIST (123)
    on left: 113 114, on right: 111 113
NT_RA_EXPR (124)
    on left: 115 116 117 118 119 120 121 122 123 124 125 126 127 128
    129 130 131 132 133 134 135, on right: 26 108 110 111 112 116 117
    118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133
    134 135 148 151 154 155
NT_UNOP_RA_EXPR (125)
    on left: 136 137 138 139 140 141 142 143, on right: 115 136 137
    138 139 140 141 142
NT_RA_EXPR_F (126)
    on left: 144 145 146 147 148 149 150 151, on right: 143 148 149
    150
NT_RA_FUNC_CALL (127)
    on left: 152 153, on right: 147
NT_RA_LIST (128)
    on left: 154 155, on right: 153 154
NT_TYPE (129)
    on left: 156 157 158 159 160 161 162 163 164 165,
    on right: 6 7 8 9 10 11 33 34 56 140 191 196 197
NT_EXPR (130)
    on left: 166 167 168 169 170 171 172 173 174 175 176 177 178 179
    180 181 182 183 184, on right: 33 34 59 63 64 65 66 67 68 69 70
    71 72 73 74 75 76 77 78 79 80 81 82 84 86 89 90 92 94 97 98 99
    100 101 103 106 167 168 169 170 171 172 173 174 175 176 177 178
    179 180 181 182 183 184 198 201 204 205 209 210
NT_UNOP_EXPR (131)
    on left: 185 186 187 188 189 190 191 192, on right: 166 185 186
    187 188 189 190 191
NT_EXPR_F (132)
    on left: 193 194 195 196 197 198 199 200 201, on right: 192 198
    199 200
NT_FUNC_CALL (133)
    on left: 202 203, on right: 195
NT_EXPR_LIST (134)
    on left: 204 205, on right: 203 204
NT_PTR (135)
    on left: 206 207 208, on right: 140 191 196 206
NT_PTR_A (136)
    on left: 209 210, on right: 208 209


state 0

    0 $accept: . NT_WHOLE $end

    TM_VOID           shift, and go to state 1
    TM_CHAR           shift, and go to state 2
    TM_U8             shift, and go to state 3
    TM_INT            shift, and go to state 4
    TM_INT64          shift, and go to state 5
    TM_UINT           shift, and go to state 6
    TM_UINT64         shift, and go to state 7
    TM_STRUCT         shift, and go to state 8
    TM_UNION          shift, and go to state 9
    TM_ENUM           shift, and go to state 10
    TM_COMMENT_START  shift, and go to state 11

    NT_WHOLE        go to state 12
    NT_ROOT_LIST    go to state 13
    NT_ROOT         go to state 14
    NT_DEF          go to state 15
    NT_LET_COMMENT  go to state 16
    NT_VARDECL      go to state 17
    NT_TYPE         go to state 18


state 1

  156 NT_TYPE: TM_VOID .

    $default  reduce using rule 156 (NT_TYPE)


state 2

  157 NT_TYPE: TM_CHAR .

    $default  reduce using rule 157 (NT_TYPE)


state 3

  158 NT_TYPE: TM_U8 .

    $default  reduce using rule 158 (NT_TYPE)


state 4

  159 NT_TYPE: TM_INT .

    $default  reduce using rule 159 (NT_TYPE)


state 5

  160 NT_TYPE: TM_INT64 .

    $default  reduce using rule 160 (NT_TYPE)


state 6

  161 NT_TYPE: TM_UINT .

    $default  reduce using rule 161 (NT_TYPE)


state 7

  162 NT_TYPE: TM_UINT64 .

    $default  reduce using rule 162 (NT_TYPE)


state 8

   12 NT_DEF: TM_STRUCT . TM_IDENT NT_FIELD_DEC_LIST TM_SEMICOL
   13       | TM_STRUCT . TM_IDENT TM_SEMICOL
  163 NT_TYPE: TM_STRUCT . TM_IDENT

    TM_IDENT  shift, and go to state 19


state 9

   14 NT_DEF: TM_UNION . TM_IDENT NT_FIELD_DEC_LIST TM_SEMICOL
   15       | TM_UNION . TM_IDENT TM_SEMICOL
  164 NT_TYPE: TM_UNION . TM_IDENT

    TM_IDENT  shift, and go to state 20


state 10

   16 NT_DEF: TM_ENUM . TM_IDENT NT_ENUM_LIST TM_SEMICOL
   17       | TM_ENUM . TM_IDENT TM_SEMICOL
  165 NT_TYPE: TM_ENUM . TM_IDENT

    TM_IDENT  shift, and go to state 21


state 11

   26 NT_LET_COMMENT: TM_COMMENT_START . TM_LET TM_IDENT NT_VAR_LIST TM_ASGNOP NT_RA_EXPR TM_COMMENT_END

    TM_LET  shift, and go to state 22


state 12

    0 $accept: NT_WHOLE . $end

    $end  shift, and go to state 23


state 13

    1 NT_WHOLE: NT_ROOT_LIST .

    $default  reduce using rule 1 (NT_WHOLE)


state 14

    2 NT_ROOT_LIST: NT_ROOT . NT_ROOT_LIST
    3             | NT_ROOT .

    TM_VOID           shift, and go to state 1
    TM_CHAR           shift, and go to state 2
    TM_U8             shift, and go to state 3
    TM_INT            shift, and go to state 4
    TM_INT64          shift, and go to state 5
    TM_UINT           shift, and go to state 6
    TM_UINT64         shift, and go to state 7
    TM_STRUCT         shift, and go to state 8
    TM_UNION          shift, and go to state 9
    TM_ENUM           shift, and go to state 10
    TM_COMMENT_START  shift, and go to state 11

    $default  reduce using rule 3 (NT_ROOT_LIST)

    NT_ROOT_LIST    go to state 24
    NT_ROOT         go to state 14
    NT_DEF          go to state 15
    NT_LET_COMMENT  go to state 16
    NT_VARDECL      go to state 17
    NT_TYPE         go to state 18


state 15

    4 NT_ROOT: NT_DEF .

    $default  reduce using rule 4 (NT_ROOT)


state 16

   18 NT_DEF: NT_LET_COMMENT .

    $default  reduce using rule 18 (NT_DEF)


state 17

    5 NT_ROOT: NT_VARDECL . TM_SEMICOL

    TM_SEMICOL  shift, and go to state 25


state 18

    6 NT_DEF: NT_TYPE . NT_FUNCDECDEF_EXPR TM_SEMICOL
    7       | NT_TYPE . NT_FUNCDECDEF_EXPR NT_WITH_COMMENT TM_SEMICOL
    8       | NT_TYPE . NT_FUNCDECDEF_EXPR TM_LEFT_BRACE TM_RIGHT_BRACE
    9       | NT_TYPE . NT_FUNCDECDEF_EXPR NT_WITH_COMMENT TM_LEFT_BRACE TM_RIGHT_BRACE
   10       | NT_TYPE . NT_FUNCDECDEF_EXPR TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   11       | NT_TYPE . NT_FUNCDECDEF_EXPR NT_WITH_COMMENT TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   56 NT_VARDECL: NT_TYPE . NT_EXPR_VD

    TM_IDENT       shift, and go to state 26
    TM_LEFT_PAREN  shift, and go to state 27
    TM_STAR        shift, and go to state 28

    NT_FUNCDECDEF_EXPR    go to state 29
    NT_FUNCDECDEF_EXPR_N  go to state 30
    NT_EXPR_VD            go to state 31
    NT_EXPR_VD_A          go to state 32
    NT_EXPR_VD_B          go to state 33


state 19

   12 NT_DEF: TM_STRUCT TM_IDENT . NT_FIELD_DEC_LIST TM_SEMICOL
   13       | TM_STRUCT TM_IDENT . TM_SEMICOL
  163 NT_TYPE: TM_STRUCT TM_IDENT .

    TM_LEFT_BRACE  shift, and go to state 34
    TM_SEMICOL     shift, and go to state 35

    $default  reduce using rule 163 (NT_TYPE)

    NT_FIELD_DEC_LIST  go to state 36


state 20

   14 NT_DEF: TM_UNION TM_IDENT . NT_FIELD_DEC_LIST TM_SEMICOL
   15       | TM_UNION TM_IDENT . TM_SEMICOL
  164 NT_TYPE: TM_UNION TM_IDENT .

    TM_LEFT_BRACE  shift, and go to state 34
    TM_SEMICOL     shift, and go to state 37

    $default  reduce using rule 164 (NT_TYPE)

    NT_FIELD_DEC_LIST  go to state 38


state 21

   16 NT_DEF: TM_ENUM TM_IDENT . NT_ENUM_LIST TM_SEMICOL
   17       | TM_ENUM TM_IDENT . TM_SEMICOL
  165 NT_TYPE: TM_ENUM TM_IDENT .

    TM_LEFT_BRACE  shift, and go to state 39
    TM_SEMICOL     shift, and go to state 40

    $default  reduce using rule 165 (NT_TYPE)

    NT_ENUM_LIST  go to state 41


state 22

   26 NT_LET_COMMENT: TM_COMMENT_START TM_LET . TM_IDENT NT_VAR_LIST TM_ASGNOP NT_RA_EXPR TM_COMMENT_END

    TM_IDENT  shift, and go to state 42


state 23

    0 $accept: NT_WHOLE $end .

    $default  accept


state 24

    2 NT_ROOT_LIST: NT_ROOT NT_ROOT_LIST .

    $default  reduce using rule 2 (NT_ROOT_LIST)


state 25

    5 NT_ROOT: NT_VARDECL TM_SEMICOL .

    $default  reduce using rule 5 (NT_ROOT)


state 26

   21 NT_FUNCDECDEF_EXPR_N: TM_IDENT . NT_FUNC_DEF
   61 NT_EXPR_VD_B: TM_IDENT .

    TM_LEFT_PAREN  shift, and go to state 43
